--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,27 +3,42 @@
     margin: 0;
 }
 
+.app {
+    // background-color: grey;
+        width: 794px;
+
+}
+
 .container {
+    // width: 794px;
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 2rem;
+    padding-top: 1rem;
 }
 
 .avatar-card {
     margin-left: 1rem;
 }
 
+.header-mobile {
+    margin-bottom: 2rem !important;
+    height: 4rem;
+    text-align: center;
+    padding-top: 1rem;
+}
+
+.header-laptop {
+    display: none;
+}
 
 .avatar-body {
     width: 794px;   /* width of actual image */
     height: 1123px; /* height of actual image */
     background-image: url("../img/body.png");
     background-repeat: no-repeat;
-    margin-top: -8rem;
-    padding-bottom: -5rem;
+    margin-top: -7rem;
 }
-
 
 .buttons {
     display: flex;
@@ -33,6 +48,7 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
     margin-left: 0.3rem;
+    height: 300px;
 }
 
 #eyes, #ears, #nose, #mouth, #clothes {
@@ -53,7 +69,6 @@ $items: ("eyes": 9, "ears": 3, "mouth": 4, "nose": 3, "clothes": 3);
     }
 }
 
-
 @each $item, $total in $items {
 
 
@@ -65,9 +80,71 @@ $items: ("eyes": 9, "ears": 3, "mouth": 4, "nose": 3, "clothes": 3);
     
 }
 
-#randomize {
+    #randomize {
     margin-top: 3rem;
     margin-bottom: 3rem;
     min-width: 13rem;
     height: 5rem;
+}
+
+@media only screen and (min-width: 768px) {
+    .app {
+        // width: 794px;
+
+    }
+
+    .container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding-top: 1rem;
+        // background-color: grey;
+    }
+
+    .header-mobile {
+        display: none;
+    }
+
+    .header-laptop {
+        display:inline;
+        width: 70rem;
+        text-align: center;
+        height: 5rem;
+        padding-top: 1rem;
+        padding-bottom: 3rem;
+    }
+
+    .right-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        width: 250px;
+        height: 750px;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+    @each $item, $total in $items {
+
+
+        #next#{$item}{
+            margin-top: 2rem;
+            min-width: 10rem;
+            height: 4rem;
+        }
+        
+    }
+    
+        #randomize {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        min-width: 10rem;
+        height: 4rem;
+    }
 }
